2006-05-25  Miguel de Icaza  <miguel@novell.com>

	* Add new dialog-*.png Tango icons (dialog-question is from a
	different theme as Tango is still missing it).

2006-05-24  Miguel de Icaza  <miguel@novell.com>

	* Changes so that we can use the filename as the resource name,
	should help compiling from within VisualStudio.

2006-05-23  Miguel de Icaza  <miguel@novell.com>

	* resources/: Add Tango icons in various sizes.

2006-05-18  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Windows.Forms_test.dll.sources: Add the unit tests for
	PaintEventArgs to the build (tested under both 1.1 and 2.0).

2006-05-15  Peter Dennis Bartok  <pbartok@novell.com>

	* Makefile, System.Windows.Forms.dll.resources: Added NWSE and NESW 
	  cursors

2006-04-28  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile : added -r:System.Data.dll for "make test".

2006-04-27  Peter Dennis Bartok  <pbartok@novell.com>

	* SWF.csproj: Updated, matching current .sources

2006-04-16  Gert Driesen  <drieseng@users.sourceforge.net>

	* System.Windows.Forms_test.dll.sources: Added TabControlTest.cs.

2006-03-21  Jackson Harper  <jackson@ximian.com>

	* System.Windows.Forms.dll.resources: Add the keyboard resources.

2006-03-13  Peter Dennis Bartok  <pbartok@novell.com>

	* System.Windows.Forms.dll.sources: Added ProgressBarStyle.cs

2006-03-11  Alexander Olk  <alex.olk@googlemail.com>

	* System.Windows.Forms.dll.sources: Removed MimeGenerated.cs

2006-03-09  Jonathan Gilbert  <logic@deltaq.org>

	* System.Windows.Forms/AutoScaleMode.cs: Added new file for
	  the 2.0 enumeration.
	* System.Windows.Forms/ContainerControl.cs: Added stub for
	  AutoScaleMode property; outputs a message to stderr to
	  encourage people familiar with its behaviour to implement
	  it. :-)
	* System.Windows.Forms/Control.cs: Added stub for AutoScale;
	  outputs a message just like ContainerControl::AutoScaleMode.
	* System.Windows.Forms.dll.sources: Added AutoScaleMode.cs to
	  the list of files to build.
