@@ -1,3 +1,7 @@
+2006-05-30  Wade Berrier <wberrier@novell.com>
+
+	* Makefile: fix resource filenames to fix make dist
+
 2006-05-25  Miguel de Icaza  <miguel@novell.com>
 
 	* Add new dialog-*.png Tango icons (dialog-question is from a
